<!-- /* Javier Suárez Guzmán
        Septiembre 2022 */ -->

<resources>
    <string name="app_name">droid Kotlin</string>

    <string name="Email">Correo electrónico </string>
    <string name="Password">Contraseña </string>

    <string name="loginTitle">Iniciar sesión</string>
    <string name="loginButton">Ingresar </string>

    <string name="registerTitle">Registrarse</string>
    <string name="registerPassword">Repetir Contraseña </string>
    <string name="registerButton">Registrarme </string>
    <string name="registerToLoginButton">Ya tengo cuenta </string>

    <string name="mainHola">¡Bienvenid@!</string>
    <string name="mainMapa">VER MAPA</string>
    <string name="mainAr">VER AR</string>

    <!-- Apoyo desde el codelab -->
    <string name="geospatial_pose" translatable="false">LAT/LNG: %.6f˚, %.6f˚\n\t\t\tACCURACY: %.2fm\nALTITUDE: %.2fm\n\t\t\tACCURACY: %.2fm\nHEADING: %.1f˚\n\t\t\tACCURACY: %.1f˚</string>
    <string name="earth_state">EarthState: %1$s\nTrackingState: %2$s\n%3$s</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources><!--
    <string name=""> </string>
    -->