<?xml version="1.0" encoding="utf-8"?>
<!-- /* Javier Suárez Guzmán
        Septiembre 2022 */ -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/loginTitle"
        android:textColor="@color/gris"
        android:textAlignment="center"
        android:textSize="42sp"
        />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/Email"
        android:textColorHint="@color/white"
        android:textColor="@color/gris"
        android:inputType="textEmailAddress"
        android:textSize="28sp"
        />

    <EditText
        android:id="@+id/loginPass"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/Password"
        android:textColorHint="@color/white"
        android:textColor="@color/gris"
        android:inputType="textPassword"
        android:textSize="28sp"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textSize="20sp"
        android:text="@string/loginButton"
        android:scaleX="0.88"
        />
    <Button
        android:id="@+id/loginToRegister"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textSize="20sp"
        android:text="@string/registerButton"
        android:scaleX="0.88"
        />

</LinearLayout>