<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="33dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="7dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="7dp" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerTitle"
        android:textAlignment="center"
        android:textColor="#4488ee"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/gl_top" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/asd"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:hint="@string/Email"

        android:scaleX=".95"
        android:textColorHint="#889399"
        app:endIconMode="password_toggle"
        app:endIconTint="#889399"

        app:layout_constraintEnd_toStartOf="@+id/gl_left"
        app:layout_constraintStart_toEndOf="@+id/gl_right"
        app:layout_constraintTop_toBottomOf="@+id/Title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="#00ff0000"
            android:inputType="textEmailAddress"
            android:textSize="28sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/qwe"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:endIconMode="password_toggle"
        app:endIconTint="#889399"
        android:scaleX=".95"
        android:hint="@string/Password"
        android:textColorHint="#889399"

        app:layout_constraintEnd_toStartOf="@+id/gl_left"
        app:layout_constraintStart_toEndOf="@+id/gl_right"
        app:layout_constraintTop_toBottomOf="@+id/asd">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="#00ff0000"
            android:inputType="textPassword"
            android:textSize="28sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/zxc"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:endIconMode="password_toggle"
        app:endIconTint="#889399"
        android:scaleX=".95"
        android:hint="@string/registerPassword"
        android:textColorHint="#889399"

        app:layout_constraintEnd_toStartOf="@+id/gl_left"
        app:layout_constraintStart_toEndOf="@+id/gl_right"
        app:layout_constraintTop_toBottomOf="@+id/qwe">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="#00ff0000"
            android:inputType="textPassword"
            android:textSize="28sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:scaleX=".9"
        android:text="@string/registerButton"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_left"
        app:layout_constraintStart_toEndOf="@+id/gl_right"
        app:layout_constraintTop_toBottomOf="@+id/zxc"/>
    <Button
        android:id="@+id/registerToLogin"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:scaleX=".9"
        android:text="@string/registerToLoginButton"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_left"
        app:layout_constraintStart_toEndOf="@+id/gl_right"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>